--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,32 @@
 name: sndcpy
-on: [push, workflow_dispatch]
+
+on:
+  push:
+    branches: [ "master", "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-          
-      - name: Build and Rename APK
-        run: |
-          chmod +x gradlew
-          ./gradlew assembleRelease
-          mv app/build/outputs/apk/release/app-release-unsigned.apk app/build/outputs/apk/release/sndcpy.apk
-          
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: sndcpy
-          path: app/build/outputs/apk/release/sndcpy.apk
+    - uses: actions/checkout@v4
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: gradle
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Build with Gradle
+      run: ./gradlew assembleDebug
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: sndcpy-hidden-launcher
+        path: app/build/outputs/apk/debug/app-debug.apk
