--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
       run: chmod +x gradlew
 
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      run: ./gradlew assembleRelease
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: sndcpy-hidden-launcher
-        path: app/build/outputs/apk/debug/app-debug.apk
+        name: sndcpy-optimized
+        path: app/build/outputs/apk/release/app-release.apk
