--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,14 @@ android {
         release {
             minifyEnabled true
             shrinkResources true
-            
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-
             signingConfig signingConfigs.debug
         }
+    }
+    
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
